fix: opacity flickering

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -19,7 +19,7 @@ window#waybar {
   border-bottom: 0px solid #ffffff;
   transition-property: background;
   border-radius: 5px 5px 5px 5px;
-  opacity: 0.8;
+  opacity: 1;
   transition-duration: .5s;
 }
 
